--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mailersend/laravel-driver": "^2.7",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
